--- a/unit/src/main/res/layout/adapter_unit_list_group_item.xml
+++ b/unit/src/main/res/layout/adapter_unit_list_group_item.xml
@@ -9,16 +9,27 @@
     <TableRow
         android:id="@+id/service_manage_item_layout"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:gravity="center_vertical">
 
-        <ImageView
-            android:id="@+id/unit_item_list_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            app:srcCompat="@drawable/app_base_image_item_icon" />
+        <LinearLayout
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/app_base_item_background"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/unit_item_list_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:srcCompat="@drawable/app_base_image_item_icon" />
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/unit_item_list_name"
