--- a/unit/src/main/res/layout/adapter_unit_list_item_by_control_pn.xml
+++ b/unit/src/main/res/layout/adapter_unit_list_item_by_control_pn.xml
@@ -21,8 +21,8 @@
 
             <com.erayic.agr.common.view.CircleImageView
                 android:id="@+id/unit_content_icon"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 app:srcCompat="@drawable/app_base_android_1" />
@@ -61,13 +61,35 @@
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/unit_content_goto"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            app:srcCompat="@drawable/app_base_default_right" />
+        <LinearLayout
+            android:layout_width="180dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <com.erayic.agr.common.view.CircleImageView
+                android:id="@+id/unit_content_open"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginRight="10dp"
+                app:srcCompat="@drawable/app_base_android_1" />
+
+            <com.erayic.agr.common.view.CircleImageView
+                android:id="@+id/unit_content_stop"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                app:srcCompat="@drawable/app_base_android_1" />
+
+            <com.erayic.agr.common.view.CircleImageView
+                android:id="@+id/unit_content_close"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginLeft="10dp"
+                app:srcCompat="@drawable/app_base_android_1" />
+        </LinearLayout>
+
 
     </LinearLayout>
 </LinearLayout>
