--- a/unit/src/main/res/layout/adapter_unit_list_item_by_monitor.xml
+++ b/unit/src/main/res/layout/adapter_unit_list_item_by_monitor.xml
@@ -14,23 +14,24 @@
         android:orientation="horizontal">
 
         <RelativeLayout
-            android:layout_width="50dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp">
 
             <com.erayic.agr.common.view.CircleImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:id="@+id/unit_content_icon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                app:srcCompat="@drawable/image_unit_warning" />
+                app:srcCompat="@drawable/app_base_android_1" />
         </RelativeLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="1dp"
+            android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
@@ -38,25 +39,41 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
+                android:layout_height="30dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/unit_content_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
                     android:ellipsize="end"
-                    android:gravity="center_vertical|start"
-                    android:maxLines="2"
-                    android:text="系统未检测到相关数据，请联系我们"
-                    android:textColor="@color/app_base_text_title_3"
-                    android:textSize="14sp" />
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:text="上海青"
+                    android:textColor="@color/app_base_text_title_1"
+                    android:textSize="16sp" />
 
+                <TextView
+                    android:id="@+id/unit_content_sub_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical|end"
+                    android:maxLines="1"
+                    android:text="2017-07-14"
+                    android:textColor="@color/app_base_text_title_3"
+                    android:textSize="12sp" />
             </LinearLayout>
 
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/unit_content_goto"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            app:srcCompat="@drawable/app_base_default_right" />
 
     </LinearLayout>
 </LinearLayout>
