--- a/serverproduct/src/main/res/layout/activity_dynamic_price.xml
+++ b/serverproduct/src/main/res/layout/activity_dynamic_price.xml
@@ -138,6 +138,7 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
            <ListView
+               android:layout_marginTop="2dp"
                android:background="@color/white"
                android:scrollbars="none"
                android:divider="@color/transparent"
