--- a/serverproduct/src/main/res/layout/dynamic_prices_item.xml
+++ b/serverproduct/src/main/res/layout/dynamic_prices_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/serverproduct_dynamic_price_linearlayout"
     android:background="@drawable/layout_click_selector"
     android:layout_height="50dp">
             <LinearLayout
@@ -22,6 +23,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
                 <TextView
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
                     android:layout_weight="5"
                     android:id="@+id/serverproduct_dynamic_price_item_market_textview"
                     android:textColor="@color/textfont"
