--- a/serverproduct/src/main/res/layout/forecast_reporting_item.xml
+++ b/serverproduct/src/main/res/layout/forecast_reporting_item.xml
@@ -5,6 +5,7 @@
     android:layout_height="30dp">
 
     <LinearLayout
+        android:id="@+id/serverproduct_reporting_linearlayout"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_gravity="center_vertical"
