--- a/serverproduct/src/main/res/layout/activity_dynamic_price.xml
+++ b/serverproduct/src/main/res/layout/activity_dynamic_price.xml
@@ -53,6 +53,14 @@
                 />
         </LinearLayout>
     </RelativeLayout>
+    <ScrollView
+        android:scrollbars="none"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -106,7 +114,7 @@
                 android:layout_marginLeft="10dp"
                 android:text="日期"
                 android:maxLines="3"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 android:layout_gravity="center_vertical"
                 android:gravity="center"
                 android:textColor="@color/fontcolor"
@@ -131,13 +139,13 @@
                 android:maxLines="1"
                 android:gravity="center"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 android:textColor="@color/fontcolor"
                 android:textSize="@dimen/content"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-           <ListView
+           <com.erayic.agr.serverproduct.view.custom.ScrollListView
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:scrollbars="none"
@@ -147,4 +155,6 @@
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
     </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
