--- a/serverproduct/src/main/res/layout/agricultural_detail_info_item.xml
+++ b/serverproduct/src/main/res/layout/agricultural_detail_info_item.xml
@@ -1,34 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/serverproduct_agricultural_detail_item_title_relativelayout"
     android:background="@color/app_base_layout_background"
-    android:orientation="vertical"
-    android:theme="@style/AppTheme">
-
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/toptitle"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/app_base_bar_background"
-            app:contentInsetLeft="0dp"
-            app:contentInsetStart="0dp"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
-
-        </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
-
+    android:layout_height="match_parent">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -36,7 +14,7 @@
             <TextView
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:id="@+id/serverproduct_policies_regulations_title_textview"
+                android:id="@+id/serverproduct_agricultural_detail_item_title_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -50,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:id="@+id/serverproduct_policies_regulations_source_textview"
+                    android:id="@+id/serverproduct_agricultural_detail_item_source_textview"
                     android:ellipsize="end"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -59,7 +37,7 @@
                     android:textSize="@dimen/title" />
                 <TextView
                     android:layout_marginLeft="15dp"
-                    android:id="@+id/serverproduct_policies_regulations_publishdate_textview"
+                    android:id="@+id/serverproduct_agricultural_detail_item_publishdate_textview"
                     android:ellipsize="end"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -70,7 +48,7 @@
             <TextView
                 android:layout_marginRight="5dp"
                 android:layout_marginLeft="5dp"
-                android:id="@+id/serverproduct_policies_regulations_content_textview"
+                android:id="@+id/serverproduct_agricultural_detail_item_content_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/contentbg"
@@ -80,4 +58,4 @@
                 android:textSize="@dimen/content" />
         </LinearLayout>
     </ScrollView>
-</LinearLayout>
+</RelativeLayout>
