--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -20,6 +20,10 @@
         <item name="editTextColor">@android:color/white</item>
         <!--Navigation icon颜色设置-->
         <item name="drawerArrowStyle">@style/AppTheme.MyDrawerArrowStyle</item>
+        <!--popupMenu弹出菜单样式-->
+        <item name="popupMenuStyle">@style/AppThemePopupMenu</item>
+        <item name="textAppearanceSmallPopupMenu">@style/AppThemeTextAppearance</item>
+        <item name="textAppearanceLargePopupMenu">@style/AppThemeTextAppearance</item>
     </style>
 
     <!-- 用于开启滑动返回功能的 Activity -->
@@ -51,6 +55,15 @@
         <item name="spinBars">false</item>
         <!--设定 drawer arrow 的颜色-->
         <item name="color">@android:color/white</item>
+    </style>
+
+    <style name="AppThemePopupMenu">
+        <item name="android:popupBackground">#000000</item>
+    </style>
+
+    <style name="AppThemeTextAppearance">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 
