--- a/unit/src/main/res/layout/fragment_unit_list.xml
+++ b/unit/src/main/res/layout/fragment_unit_list.xml
@@ -51,7 +51,7 @@
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/unit_list_swipe"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:descendantFocusability="blocksDescendants">
 
             <android.support.v7.widget.RecyclerView
