--- a/service/src/main/res/layout/fragment_service_entrance.xml
+++ b/service/src/main/res/layout/fragment_service_entrance.xml
@@ -56,7 +56,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
